welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: ':' expected but ')' found.
def aRC(c)
         ^FlowerPot:8: error: identifier expected but '}' found.
}
^