welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
def aRC(c)
{avance();coupstylo(c);recule()}
def faireFleur(c:Color)
{coupstylo(c);avance();coupstylo(Color.Yellow);aRC(c);droite();aRC(c);gauche();gauche();aRC(c);droite()}
faireFleur(Color.PINK)